# codotaku_sdl

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: App.cpp  App.h  main.cpp
